<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/viewTop"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="Hello World!"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/background"
        android:layout_marginVertical="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@id/viewOrderInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewTop" />

    <View
        android:id="@+id/viewOrderInfo"
        android:layout_width="0dp"
        android:layout_height="@dimen/_180sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewOderInform"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_16sdp"
        android:text="@string/order_info"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@id/viewOrderInfo"
        app:layout_constraintStart_toStartOf="@id/viewOrderInfo"
        app:layout_constraintTop_toTopOf="@id/viewOrderInfo" />

    <View
        android:id="@+id/viewOrderSummery"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginVertical="@dimen/_16sdp"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="@id/viewOrderInfo"
        app:layout_constraintEnd_toEndOf="@id/viewOrderInfo"
        app:layout_constraintStart_toStartOf="@id/viewOrderInfo"
        app:layout_constraintTop_toBottomOf="@id/textViewOderInform" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTotalProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/_16sdp"
        android:text="@string/total_products"
        app:layout_constraintBottom_toTopOf="@id/textViewSubTotal"
        app:layout_constraintEnd_toStartOf="@id/textViewTotalProductPrice"
        app:layout_constraintStart_toStartOf="@id/viewOrderSummery"
        app:layout_constraintTop_toTopOf="@id/viewOrderSummery" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTotalProductPrice"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="3"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/textViewTotalProduct"
        app:layout_constraintEnd_toEndOf="@id/viewOrderSummery"
        app:layout_constraintStart_toEndOf="@id/textViewTotalProduct"
        app:layout_constraintTop_toTopOf="@id/textViewTotalProduct"

        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSubTotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/_16sdp"
        android:text="@string/subtotal"
        app:layout_constraintBottom_toTopOf="@id/textViewDeliveryFree"
        app:layout_constraintEnd_toEndOf="@id/textViewTotalProduct"
        app:layout_constraintStart_toStartOf="@id/textViewTotalProduct"
        app:layout_constraintTop_toBottomOf="@id/textViewTotalProduct" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSubTotalPrice"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_43_37"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/textViewSubTotal"
        app:layout_constraintEnd_toEndOf="@id/textViewTotalProductPrice"
        app:layout_constraintStart_toStartOf="@id/textViewTotalProductPrice"
        app:layout_constraintTop_toTopOf="@id/textViewSubTotal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDeliveryFree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/_16sdp"
        android:text="@string/delivery_free"
        app:layout_constraintBottom_toTopOf="@id/textViewServiceCharge6"
        app:layout_constraintEnd_toEndOf="@id/textViewSubTotal"
        app:layout_constraintStart_toStartOf="@id/textViewSubTotal"
        app:layout_constraintTop_toBottomOf="@id/textViewSubTotal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDeliveryFreePrice"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_0_00"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/textViewDeliveryFree"
        app:layout_constraintEnd_toEndOf="@id/textViewSubTotalPrice"
        app:layout_constraintStart_toStartOf="@id/textViewSubTotalPrice"
        app:layout_constraintTop_toTopOf="@id/textViewDeliveryFree" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewServiceCharge6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/_16sdp"
        android:text="@string/service_tax_6"
        app:layout_constraintBottom_toTopOf="@id/textViewTotal"
        app:layout_constraintEnd_toEndOf="@id/textViewDeliveryFree"
        app:layout_constraintStart_toStartOf="@id/textViewDeliveryFree"
        app:layout_constraintTop_toBottomOf="@id/textViewDeliveryFree" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewServiceCharge6Price"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_2_10"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/textViewServiceCharge6"
        app:layout_constraintEnd_toEndOf="@id/textViewDeliveryFreePrice"
        app:layout_constraintStart_toStartOf="@id/textViewDeliveryFreePrice"
        app:layout_constraintTop_toTopOf="@id/textViewServiceCharge6" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTotal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="start|center"
        android:paddingStart="@dimen/_16sdp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="@id/viewOrderSummery"
        app:layout_constraintEnd_toEndOf="@id/textViewServiceCharge6"
        app:layout_constraintStart_toStartOf="@id/textViewServiceCharge6"
        app:layout_constraintTop_toBottomOf="@id/textViewServiceCharge6" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/_43_37"
        android:textColor="#5ecdb6"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/textViewTotal"
        app:layout_constraintEnd_toEndOf="@id/textViewServiceCharge6Price"
        app:layout_constraintStart_toStartOf="@id/textViewServiceCharge6Price"
        app:layout_constraintTop_toTopOf="@id/textViewTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>